--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -393,7 +393,7 @@ transformUserInput({
 
 ### Args as Discriminated Union
 
-When applicable use **discriminated union type** to eliminate optional args, which will decrease complexity on function API and only necessary/required args will be passed depending on its use case.
+When applicable use **discriminated union type** to eliminate optional properties, which will decrease complexity on function API and only required properties will be passed depending on its use case.
 
 ```ts
 // ❌ Avoid optional properties as they increase complexity of function API
