--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -923,7 +923,7 @@ An exaggerated example where implementing 10 React components with 5 required pr
 
 ### Props as Discriminated Type
 
-When applicable use **discriminated type** to eliminate optional props, which will decrease complexity on component API and only necessary/required props will be passed depending on its use case.
+When applicable use **discriminated type** to eliminate optional props, which will decrease complexity on component API and only required props will be passed depending on its use case.
 
 ```ts
 // ❌ Avoid optional props as they increase complexity of component API
