--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -114,7 +114,7 @@ Majority of the data should be immutable with use of `Readonly`, `ReadonlyArray`
 Using readonly type prevents accidental data mutations, which reduces the risk of introducing bugs related to unintended side effects.
 
 When performing data processing always return new array, object etc. To minimize cognitive load for future developers, aim to keep data objects flat and small.  
-As an exception mutations should be used sparingly in cases where truly necessary: complex objects, performance reasoning etc.
+Mutations should be used sparingly and only as an exception in cases where they are truly necessary, such as when dealing with complex objects, performance-related reasons etc.
 
 ```ts
 // ❌ Avoid data mutations
