--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -109,7 +109,7 @@ const [userRole, setUserRole] = useState<UserRole>('admin'); // Type 'UserRole'
 
 ### Data Immutability
 
-Majority of the data should be immutable with use of `Readonly`, `ReadonlyArray`.
+The majority of the data should be immutable, using types like `Readonly` and `ReadonlyArray`.
 
 Using readonly type prevents accidental data mutations, which reduces the risk of introducing bugs related to unintended side effects.
 
