--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -54,7 +54,7 @@ Style Guide assumes using, but is not limited to:
 ## TLDR
 
 - Embrace const assertions. [&#11107;](#const-assertion)
-- Strive for data immutability (`Readonly`, `ReadonlyArray`). [&#11107;](#data-immutability)
+- Strive for data immutability using types like `Readonly` and `ReadonlyArray`. [&#11107;](#data-immutability)
 - Majority of object properties should be required (use optional sparingly). [&#11107;](#required--optional-object-properties)
 - Embrace discriminated unions. [&#11107;](#discriminated-union)
 - Avoid type assertions. [&#11107;](#type--non-nullability-assertions)
