--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -216,19 +216,14 @@ Discriminated unions advantages:
 
   // TypeScript warns us with errors in calculateArea function
   const calculateArea = (shape: Shape) => {
-  // Error - Switch is not exhaustive. Cases not matched: "triangle"
-  switch (shape.kind) {
-  case 'circle':
-  return Math.PI _ shape.radius \*\* 2;
-  case 'square':
-  return shape.size _ shape.width; // Error - Property 'width' does not exist on type 'square'
-  }
+    // Error - Switch is not exhaustive. Cases not matched: "triangle"
+    switch (shape.kind) {
+      case 'circle':
+        return Math.PI * shape.radius ** 2;
+      case 'square':
+        return shape.size * shape.width; // Error - Property 'width' does not exist on type 'square'
+    }
   };
-
-  ```
-
-  ```
-
   ```
 
 - Avoid code complexity introduced by [flag variables](#type-union--boolean-flags).
