--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -366,7 +366,7 @@ type UserInfo = {
 
 ```
 
-In case of declaration merging (e.g. extending third-party library types) use `interface` and disable lint rule.
+When performing declaration merging (e.g. extending third-party library types), use `interface` and disable the lint rule where necessary.
 
 ```ts
 // types.ts
