--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -406,7 +406,7 @@ const y: ReadonlyArray<string> = ['foo', 'bar'];
 
 Documentation becomes outdated the moment it's written, and worse than no documentation is wrong documentation. The same applies to types when describing the modules your app interacts with, such as APIs, messaging systems, databases etc.
 
-For external API services e.g. REST, GraphQL etc. it's crucial to generate types from their contracts, whether it's Swagger, schemas, or other sources (e.g. [openapi-ts](https://github.com/drwpow/openapi-typescript), [graphql-config](https://github.com/kamilkisiela/graphql-config)...). Avoid manually declaring and maintaining them, as it's easy to get them out of sync.
+For external API services, such as REST, GraphQL etc. it's crucial to generate types from their contracts, whether they use Swagger, schemas, or other sources (e.g. [openapi-ts](https://github.com/drwpow/openapi-typescript), [graphql-config](https://github.com/kamilkisiela/graphql-config)...). Avoid manually declaring and maintaining types, as they can easily fall out of sync.
 
 As an exception manually declare types only when there is truly no documentation provided by external service.
 
