--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -194,7 +194,7 @@ const regularUser: User = {
 };
 ```
 
-### Discriminated union
+### Discriminated Union
 
 If there's only one TypeScript feature to choose from, embrace discriminated unions.
 
@@ -275,7 +275,7 @@ const iconColor: Color = 'blue-400';
 const customColor: Color = '#AD3128';
 ```
 
-### Type-Safe Constants with `satisfies`
+### Type-Safe Constants with satisfies
 
 The `as const satisfies` syntax is a powerful feature in TypeScript that combines strict type-checking and immutability for constants. It is particularly useful when defining constants that need to conform to a specific type.
 
