--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -277,7 +277,7 @@ const customColor: Color = '#AD3128';
 
 ### Type-Safe Constants with satisfies
 
-The `as const satisfies` syntax is a powerful feature in TypeScript that combines strict type-checking and immutability for constants. It is particularly useful when defining constants that need to conform to a specific type.
+The `as const satisfies` syntax is a powerful TypeScript feature that combines strict type-checking and immutability for constants. It is particularly useful when defining constants that need to conform to a specific type.
 
 Key benefits:
 
