--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -247,7 +247,7 @@ Consider benefits when explicitly typing the return value of a function:
 
 ### Template Literal Types
 
-Embrace using template literal types, instead of just (wide) `string` type.  
+Embrace using template literal types, instead of just wide `string` type.  
 Template literal types have many applicable use cases e.g. API endpoints, routing, internationalization, database queries, CSS typings ...
 
 ```ts
