--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -302,7 +302,7 @@ const IDLE_ORDER = {
 
 ### Template Literal Types
 
-Embrace using template literal types, instead of just wide `string` type.  
+Embrace template literal types instead of using the broad `string` type wherever possible.
 Template literal types have many applicable use cases e.g. API endpoints, routing, internationalization, database queries, CSS typings ...
 
 ```ts
