--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -303,7 +303,7 @@ const IDLE_ORDER = {
 ### Template Literal Types
 
 Embrace template literal types instead of using the broad `string` type wherever possible.
-Template literal types have many applicable use cases e.g. API endpoints, routing, internationalization, database queries, CSS typings ...
+Template literal types have many practical use cases, such as defining API endpoints, routes, internationalization, database queries, CSS typings etc.
 
 ```ts
 // ❌ Avoid
