--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -321,7 +321,7 @@ type TranslationKey = `translation.${LocaleKeyPages}.${string}`; // Type Transla
 const homeTitle: TranslationKey = 'translation.home.title';
 
 // ❌ Avoid
-const color = 'blue-450'; // Type 'string' - Since color 'blue-450' doesn't exist and results in runtime error
+const color = 'blue-450'; // Type 'string' - Color 'blue-450' doesn't exist, leading to a runtime error.
 // ✅ Use
 type BaseColor = 'blue' | 'red' | 'yellow' | 'gray';
 type Variant = 50 | 100 | 200 | 300 | 400;
